# reboundlab

./: .dockerignore  .env.example  .env.vercel  .gitignore  .vercelignore  README.md  package-lock.json  package.json  railway.toml  render.yaml  turbo.json  vercel.json
agents/: README.md
backtester/: README.md  list_symbols.py  plan_date_limits.py  pyproject.toml  requirements.txt  run.py  run_json.py
backtester/core/: coin_categories.py  funding_apply.py  margin.py  mmr.py  params.py  types.py
backtester/data/: funding.py  loader.py  resample.py  timeframe.py
backtester/optimizers/: grid_config.py  grid_search.py
backtester/simulators/: multi_coin.py  single_coin.py
backtester/strategies/: averaging.py  entry.py  trailing.py
backtester/tests/: helpers.py  test_averaging.py  test_coin_categories.py  test_entry.py  test_fees.py  test_grid_config.py  test_grid_search.py  test_liq_display.py  test_margin.py  test_mmr.py  test_multi_coin.py  test_plan_date_limits.py  test_resample.py  test_single_coin.py
docs/: ADMIN_PANEL.md  API.md  ARCHITECTURE.md  BACKUP.md  COMMISSION_AUDIT.md  DATABASE.md  DATA_LOAD.md  DATA_LOAD_DECISIONS.md  DATA_LOAD_QUESTIONS.md  DEMO_CLOUD.md  DEPLOYMENT.md  DEPLOY_FREE.md  MARKET_DATA.md  MASTER_PLAN.md  NEON_SETUP.md  OWNER_GUIDE.md  PRICING.md  PROJECT_INDEX.md  ROADMAP.md  SECURITY.md  SITE_PREVIEW.md  SUPABASE_3_STEPS.md  supabase-auth-only.sql
modules/: MODULE_01.md  MODULE_02.md  MODULE_03.md  MODULE_04.md  MODULE_05.md  MODULE_06.md  MODULE_07.md  MODULE_08.md  MODULE_09.md  MODULE_10.md  MODULE_11.md  MODULE_12.md  (+16 more)
(+105 files in other folders)
