[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reboundlab-backtester"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["backtester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
